Add TF_USE_LEGACY_KERAS environment variable

--- a/.github/workflows/daily_report2.yml
+++ b/.github/workflows/daily_report2.yml
@@ -27,4 +27,5 @@ jobs:
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TF_USE_LEGACY_KERAS: '1'
         run: python main.py
